2014-01-22  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/unix/sysv/linux/s390/s390-32/sys/ucontext.h: Merge into
	s390/sys/ucontext.h.
	* sysdeps/unix/sysv/linux/s390/s390-64/sys/ucontext.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/sys/ucontext.h: New file.

2014-01-20  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #15605]
	* sysdeps/x86_64/x32/symbol-hacks.h: Include generic symbol-hacks.h.

2014-01-20  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ#16431]
	* sysdeps/unix/sysv/linux/powerpc/gettimeofday.c (__gettimeofday):
	Adjust the vDSO correctly for internal calls.
	* sysdeps/unix/sysv/linux/powerpc/time.c (time): Likewise.

2014-01-20  Allan McRae  <allan@archlinux.org>

	* po/ca.po: Update Catalan translation from translation project.

2014-01-16  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/s390/sotruss-lib.c: New file.

2014-01-16  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ#16430]
	* sysdeps/unix/sysv/linux/powerpc/gettimeofday.c
	(__GI___gettimeofday): Alias for a different internal symbol to avoid
	local calls issues by not having a PLT stub required for IFUNC calls.
	* sysdeps/unix/sysv/linux/powerpc/time.c (__GI_time): Likewise.

2014-01-16 Joseph Myers  <joseph@codesourcery.com>

	* math/test-fpucw-ieee.c: Use <> in #include of test-fpucw.c.
	* math/test-fpucw-static.c: Likewise.

2013-01-16  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #16453]
	* nscd/netgroupcache.c (addgetnetgrentX): Don't use alloca.

2014-01-15  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/sotruss-lib.c: New file: sotruss-lib.so
	implementation for powerpc.

2014-01-15  Ondřej Bílka  <neleai@seznam.cz>

	[BZ #14782]
	* sysdeps/posix/system.c (__libc_system): Do not enable
	asynchronous cancellation.

2014-01-15  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	[BZ #16427]
	* sysdeps/ieee754/ldbl-128/w_expl.c (__expl): Invoke the non-IEEE
	handling only for numbers special also in the IEEE case.
