@@ -1,3 +1,15 @@
+2014-01-23  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
+
+	* sysdeps/sh/fpu_control.h: New file.
+	* sysdeps/sh/sh4/fpu/fpu_control.h: Remove.
+	* sysdeps/unix/sysv/linux/sh/sys/ucontext.h: New file.
+	* sysdeps/unix/sysv/linux/sh/sh3/sys/ucontext.h: Remove.
+	* sysdeps/unix/sysv/linux/sh/sh3/sys: Remove directory.
+	* sysdeps/unix/sysv/linux/sh/sh4/sys/ucontext.h: Remove.
+	* sysdeps/unix/sysv/linux/sh/sh4/sys: Remove directory.
+	* sysdeps/sh/sys/ucontext.h: Remove.
+	* sysdeps/sh/sys: Remove directory.
+
 2014-01-22  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
 
 	* sysdeps/unix/sysv/linux/s390/s390-32/sys/ucontext.h: Merge into
